--- a/src/index.css
+++ b/src/index.css
@@ -387,3 +387,34 @@ button:focus-visible {
   border-color: gray; /* Back to gray without animation */
   transition: none; /* Remove transition to disable animation */
 }
+
+/* modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+  width: 50%; /* Adjust based on your needs */
+  max-width: 500px; /* Adjust based on your needs */
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 25px;
+  cursor: pointer;
+}
