--- a/src/index.css
+++ b/src/index.css
@@ -136,19 +136,29 @@ button:focus-visible {
 }
 
 /* Game Container */
+.game-keyboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .game {
   /* layout */
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
-  width: 550px;
+  max-width: 550px;
 
   /* style */
   border-radius: 1rem;
   padding: .5rem 1rem;
   background-color: var(--darkest);
   box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
+}
 
+.game-row-1 {
+  margin-top: 1rem;
+  border: red solid 1px;
 }
 
 .game-row-2 {
@@ -156,23 +166,30 @@ button:focus-visible {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
+
+  border: red solid 1px;
 }
 
 .game-row-3 {
   /* layout */
   display: flex;
   justify-content: center;
-  margin-top: 1rem;
+  margin: 1rem 0;
+
+  border: red solid 1px;
 }
 
 .game-column-1 {
-  margin-right: 1rem;
+
+  border: blue solid 1px;
 }
 
 .game-column-2 {
-  width: 15rem;
+  width: 16rem;
   background-color: var(--dark);
   border-radius: .25rem;
+
+  border: blue solid 1px;
 }
 
 /* Encryption */
@@ -199,10 +216,11 @@ button:focus-visible {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
 
   /*style */
   padding: 1.5rem 1rem;
+
+  border: plum solid 1px;
 }
 
 .swap-0, .swap-1 {
@@ -482,14 +500,6 @@ nav h1 {
   color: white;
   font-size: 45px;
 }
-.game {
-  width: 100vw;
-  height: calc(100vh - 170px);
-  display: flex;
-  align-items: center;
-  padding-top: 50px;
-  flex-direction: column;
-}
 
 .board {
   width: 450px;
@@ -532,9 +542,10 @@ nav h1 {
 }
 
 .keyboard {
-  width: 700px;
+  width: 550px;
   height: 300px;
   margin-top: 60px;
+  background-color: green;
 }
 
 .line1 {
